<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="30dip"
    android:layout_margin="20dp"
    android:background="@color/BlackTransparent" >
    <TextView
        android:id="@+id/lbl_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/WhiteSmokeTransparent"
        android:padding="3dp"
        android:text="@string/lbl_settings"
        android:textColor="@color/White"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/lbl_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_settings"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:text="@string/lbl_account"
        android:textColor="@color/White"
        android:textSize="24dp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_account"
        android:hint="@string/hint_email" >       
    </EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"        
        android:inputType="textPassword"
        android:hint="@string/hint_pass" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:text="@string/btn_login" />
    
    <TextView
        android:id="@+id/lbl_android_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:text="@string/lbl_android_settings"
        android:textColor="@color/White"
        android:textSize="24dp" />
    <Button
        android:id="@+id/btn_wifi_settings"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_android_settings"
        android:text="@string/btn_wifi_settings" />
   	
</RelativeLayout>